--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,20 +15,39 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     </head>
     <body >
+     <nav class="navbar sticky-top navbar-dark back">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <i class="fas fa-cloud"></i>
+          HowzzWeather
+        </a>
+         <h4><i class="fas fa-calendar-week"></i> <%=date%></h4>
+        </div>
+       
+      </nav>
      <div class="box" id="heading">
-       <h1 >HowzzWeather</h1>
+       <h1>Weather Report <i class="fas fa-city"></i></h1>
      </div>
      <br><br>
      <div class="box">
-          <div>
-            <form action="/Result" method="post">
-            <input type="text" name="cityName" placeholder="City">
-            <button type="submit">Check</button>      
-                </form>
-          </div>
-   
+        <div class="item">
+          <form action="/Result" method="post">
+            <input type="text" name="cityName" placeholder="City">  
+            <button type="submit"><i class="fas fa-search-location"></i></button>
+          </form>
+        </div>
+
      </div>  
+     <center>
+      <footer class="footer container-fluid">
+         <h6>Copyright <i class="far fa-copyright"></i>HowzzWeather 2021-22</h6>
+      </footer>
+     </center>
+      </div>
+      
     </body>
 </html>
