--- a/views/output.ejs
+++ b/views/output.ejs
@@ -18,22 +18,31 @@
 
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/output.css">
 
     </head>
     <body >
+    <nav class="navbar sticky-top navbar-dark back">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <i class="fas fa-cloud"></i>
+          HowzzWeather
+        </a>
+         <h4><i class="fas fa-calendar-week"></i> <%=date%>  <%=time%></h4>
+        </div>
+       
+      </nav>
        <div class="box" id="heading">
-         <h1>HowzzWeather</h1>
+         <h1>Weather Report <i class="fas fa-city"></i></h1>
        </div>
-
        <div class="box">
         <div class="item">
-           <img class="imgicon" src="<%=source%>">
+           <img class="imgicon" src="<%=source%>" width="200" height="200">
         </div>
        </div>
 
        <div class="box" id="heading">
-           <h1>Weather in <%=city%> is <%=tempR%> &#176;C</h1>
+           <h2>Temprature in <%=city%> is <%=tempR%> &#176;C</h2>
        </div>
 
        <div class="item" id="side">
@@ -41,6 +50,56 @@
             <button><i class="fas fa-hand-point-left"></i></button>
          </form>
        </div>
+
+       <div class="row">
+         <div class="col-lg-2 " >
+         </div>
+         <div class="col-lg-2 weatherCard" >
+            <h3><i class="fas fa-temperature-high"></i><br> Maximum Temprature : <%=maxtemp%></h3>
+         </div>
+         <div class="col-lg-2 weatherCard" >
+            <h3><i class="fas fa-temperature-low"></i><br> Minimum Temprature : <%=mintemp%></h3>
+         </div>
+         <div class="col-lg-2 weatherCard" >
+            <h3><i class="far fa-hand-spock"></i><br>Temprature Feels Like : <%=feeltemp%></h3>
+         </div>
+         <div class="col-lg-2 weatherCard" >
+            <h3><i class="far fa-humidity"></i><br>Humidity : <%=humidity%> <i class="fal fa-percentage"></i></h3>
+         </div>
+         <div class="col-lg-2" >
+         </div>
+       </div>
        
-    </body>
+       <div class="row">
+        <div class="col-lg-4">
+        </div>
+        <div class="col-lg-2 weatherCard" >
+            <h3><i class="fas fa-wind"></i><br>Wind Speed: <%=windspeed%> KT</h3>
+         </div>
+         <div class="col-lg-2 weatherCard" >
+            <h3><i class="fas fa-location-arrow"></i><br>Wind Direction is <%=winddeg%> &#176;</h3>
+         </div>
+        <div class="col-lg-4">
+        </div> 
+       </div>
+
+       <div class="row">
+        <div class="col-lg-4">
+        </div>
+        <div class="col-lg-4 weatherCard pb-5" >
+            <h3><i class="fas fa-file-alt"></i><br>Weather in <%=city%> is almost <%=weatherDescription%></h3>
+        </div>
+        <div class="col-lg-4">
+        </div>
+       </div>
+
+       
+       <br><br><br><br>
+       <center>
+       <footer class="footer container-fluid">
+         <h6 style="padding-top: 20px">Copyright <i class="far fa-copyright"></i>HowzzWeather 2021-22</h6>
+      </footer>
+      </center>
+       
+  </body>
 </html>
